src/infra/base/flux-operator/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-dashboard
  namespace: flux-system
spec:
  parentRefs:
    - name: kube-gateway
      namespace: envoy-gateway
      sectionName: https-flux
  hostnames:
    - "cloud.lxft.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
